design almost done

--- a/src/sass/UI-input/_ui-input-fontFamiliy.scss
+++ b/src/sass/UI-input/_ui-input-fontFamiliy.scss
@@ -17,7 +17,7 @@ $uiHeadings: #918a8a;
 	cursor: pointer;
 	transition: background-color 0.3s ease-in-out;
 	transition: border 0.3s ease-in-out;
-
+	background-color: #323232;
 	&:hover {
 		background-color: #0f0f0f;
 	}
