--- a/src/sass/_mediaBreakpoints.scss
+++ b/src/sass/_mediaBreakpoints.scss
@@ -72,18 +72,27 @@
 			}
 
 			&-list {
-				line-height: 3.5rem;
+	
+				padding: 0.45rem 0;
+				// padding: 7.18px 0;
 				border-right: 0;
 				&:nth-child(3) {
 					border-top-right-radius: 0;
 					border-right-color: none;
 				}
+
+				&:last-child{
+					border-bottom-left-radius: 0.6em;
+					
+				}
+				
 			}
 		}
 
 		&-form-container {
 			width: 68%;
 			border-bottom-left-radius: 0;
+			border-top-right-radius: 1.2em;
 		}
 
 		.ui-price-card__container {
