--- a/src/sass/UI-input/_ui-input.scss
+++ b/src/sass/UI-input/_ui-input.scss
@@ -34,6 +34,7 @@ ul.ui-input-nav-lists {
 			background-color: $uiPrimary;
 			&:hover {
 				background-color: #000000;
+				color: #e0e0e0;
 			}
 			&:nth-child(1) {
 				border-top-left-radius: 1em;
@@ -60,7 +61,6 @@ ul.ui-input-nav-lists {
 			background-color: $uiSecondary;
 			border-bottom-left-radius: 1.2em;
 			border-bottom-right-radius: 1.2em;
-
 		}
 
 		&-heading {
@@ -133,6 +133,7 @@ ul.ui-input-nav-lists {
 	display: none;
 }
 
+//LOGICAL class
 .ui-active {
 	display: flex !important;
 }
@@ -140,6 +141,20 @@ ul.ui-input-nav-lists {
 .form-hide {
 	height: 30vh;
 	background-color: #000000;
+}
+
+.chevron-container {
+	width: 5rem;
+	position: absolute;
+	bottom: 2vh;
+	right: 2vw;
+	border-radius: 2em;
+	background: rgba(240, 248, 255, 0.466);
+	text-align: center;
+	display: flex;
+	-webkit-box-flex: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .chevron-up {
@@ -153,25 +168,21 @@ ul.ui-input-nav-lists {
 	width: 3rem;
 	padding-bottom: 7px;
 	text-align: center;
-	position: relative;
-	right: calc(3vw - 91%);
-	margin-bottom: 1rem;
-
+	// position: relative;
+	// right: calc(3vw - 91%);
+	margin: 1rem 0;
 	&:hover {
 		cursor: pointer;
 		border: 4px solid $uiPrimary;
 		color: $uiPrimary;
 
-		span.tooltip{
+		span.tooltip {
 			visibility: visible;
-		
 		}
 	}
-
-	
 }
 
-.chevHide{
+.chevHide {
 	display: none;
 }
 
@@ -181,8 +192,38 @@ span.tooltip {
 	background: rgba(213, 213, 213, 0.83);
 	width: 13rem;
 	transform: rotate(90deg);
-	bottom: 17vw;
+	bottom: 7.5em;
 	border-radius: 0.3rem;
 	visibility: hidden;
 	color: #464646;
+}
+
+.navMinimize {
+	div.ui-input-nav {
+		width: 100%;
+	}
+
+	ul.ui-input-nav-lists {
+		flex-direction: row ;
+	}
+
+	li.ui-input-nav-list {
+			&:nth-child(1){
+					border-bottom-left-radius: 0.7em;
+				}
+				&:nth-child(3) {
+					border-top-right-radius: 0;
+					border-right-color: none;
+				}
+
+				&:last-child{
+					border-bottom-right-radius: 0.7em;
+					border-top-right-radius: 0.7em;
+					
+				}
+	}
+
+	div.ui-input-form-container {
+		display: none;
+	}
 }
